--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Nom de l&apos;application</string>
+    <string name="app_name">Nom de l\'application</string>
     <string name="action_autofill">Remplir les données de test</string>
     <string name="nw_error_button_cancel">Annuler</string>
     <!-- Add other translations as needed -->
